--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="style.css">
-    <link href = "https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel = "stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <ul class="menu">
-        <li class="links">Home</li>
-        <li class="links">My Videos</li>
-        <li class="links">Work</li>
-        <li class="links">Writings</li>
-        <li class="links">Contact</li>
+        <li class="links"><a href = "#Welcome">Home</a></li>
+        <li class="links"><a href = "#Contacts">Contacts</a></li>
+        <li class="links"><a href = "#Videos">Videos</a></li>
+        <li class="links"><a href = "#Work">Work</a></li>
+        <li class="links"><a href = "#Writings">Writings</a></li>
     </ul>
     <section id="Welcome">
 
@@ -36,5 +36,30 @@
         <h1>Hi</h1>
         <div class="line"></div>
         <p>Sir Tim Berners-Lee invented the World Wide Web in 1989. He is the co-founder and CTO of Inrupt.com, a tech start-up which uses, promotes and helps develop the open source Solid platform. Solid aims to give people control and agency over their data, questioning many assumptions about how the web has to work</p>
+    </section>
+    <section id="Videos">
+        <h1>Videos</h1>
+        <div class="line">
+        </div>
+        <span>
+            <iframe width="546.5" height="308.5" src="https://www.youtube.com/embed/OM6XIICm_qo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="546.5" height="308.5" src="https://www.youtube.com/embed/rCplocVemjo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </span>
+    </section>
+    <section id="Work">
+    <h1>Work</h1>
+        <div class = "line"></div>
+        <iframe width = "1080" height = "900" src = "https://en.wikipedia.org/wiki/Tim_Berners-Lee#Career_and_research" frameborder = "0"></iframe>
+    </section>
+    <section id="Writings">
+    <h1>Writings</h1>
+        <d1v class = "line"></d1v>
+        <div><a class = "article" href = "https://qz.com/1872591/tim-berners-lee-on-the-future-impacted-by-coronavirus/" target = "_blank">
+            Tim Berners-Lee thinks the world can be better after Covid-19</a></div>
+            <a class = "article" href = "https://www.wired.com/story/tim-berners-lee-world-wide-web-anniversary/" target = "_blank">Where Does the World Wide Web Go From Here?</a>
+    </section>
+    <section id="Contacts">
+    <h1>Contacts</h1>
+        QWERTYUIOPASDFGHJKLXCVB
     </section>
 </body></html>
