--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 </head>
 
 <body>
-    <ul class="menu">
-        <li class="links"><a href = "#Welcome">Home</a></li>
-        <li class="links"><a href = "#Contacts">Contacts</a></li>
-        <li class="links"><a href = "#Videos">Videos</a></li>
-        <li class="links"><a href = "#Work">Work</a></li>
-        <li class="links"><a href = "#Writings">Writings</a></li>
-    </ul>
+    <center>
+        <ul class="menu">
+            <li class="links"><a href="#Welcome">Home</a></li>
+            <li class="links"><a href="#Contacts">Contacts</a></li>
+            <li class="links"><a href="#Videos">Videos</a></li>
+            <li class="links"><a href="#Work">Work</a></li>
+            <li class="links"><a href="#Writings">Writings</a></li>
+        </ul>
+    </center>
     <section id="Welcome">
 
         <div class=" parallax-inner">
@@ -47,19 +49,24 @@
         </span>
     </section>
     <section id="Work">
-    <h1>Work</h1>
-        <div class = "line"></div>
-        <iframe width = "1080" height = "900" src = "https://en.wikipedia.org/wiki/Tim_Berners-Lee#Career_and_research" frameborder = "0"></iframe>
+        <h1>Work</h1>
+        <div class="line"></div>
+        <iframe width="1080" height="900" src="https://en.wikipedia.org/wiki/Tim_Berners-Lee#Career_and_research" frameborder="0"></iframe>
     </section>
     <section id="Writings">
-    <h1>Writings</h1>
-        <d1v class = "line"></d1v>
-        <div><a class = "article" href = "https://qz.com/1872591/tim-berners-lee-on-the-future-impacted-by-coronavirus/" target = "_blank">
-            Tim Berners-Lee thinks the world can be better after Covid-19</a></div>
-            <a class = "article" href = "https://www.wired.com/story/tim-berners-lee-world-wide-web-anniversary/" target = "_blank">Where Does the World Wide Web Go From Here?</a>
+        <h1>Writings</h1>
+        <d1v class="line"></d1v>
+        <div><a class="article" href="https://qz.com/1872591/tim-berners-lee-on-the-future-impacted-by-coronavirus/" target="_blank">
+                Tim Berners-Lee thinks the world can be better after Covid-19</a></div>
+        <a class="article" href="https://www.wired.com/story/tim-berners-lee-world-wide-web-anniversary/" target="_blank">Where Does the World Wide Web Go From Here?</a>
     </section>
     <section id="Contacts">
-    <h1>Contacts</h1>
-        QWERTYUIOPASDFGHJKLXCVB
+        <h1>Contacts</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d158857.7295356023!2d-0.24202429121831256!3d51.52877143134834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sin!4v1632484429168!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="contact_1"></div>
+        <a href="Mailto:shaurya54@outlook.com?subject=hello">
+            <i class="fa fa-instagram"></i>&nbsp;&nbsp;
+            <h3>blazeravager@gmail.com</h3>
+        </a>
     </section>
 </body></html>
